[package]
name = "moteconnection"
version = "0.1.0"
authors = ["Kaarel Ratas <kaarel.ratas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
regex = "1"
uuid = { version = "0.8", features = ["v4"] }
serialport = "3.3.0"

[dev-dependencies]
chrono = "0.4.13"
clap = "2.33.1"
