[package]
name = "moteconnection"
description = "A library to provide a TinyOS-like interface for packet communication using serial or serial-forwarder transport layers."
version = "0.1.0"
authors = ["Kaarel Ratas <kaarel.ratas@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/kendas/rust-moteconnection"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
regex = "1"
uuid = { version = "0.8", features = ["v4"] }
serialport = "3.3.0"
log = "0.4"

[dev-dependencies]
chrono = "0.4.13"
clap = "2.33.1"
stderrlog = "0.4.3"
